[package]
name = "python-calamine"
version = "0.6.1"
edition = "2021"

[lib]
name = "python_calamine"
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.33.0", features = ["chrono"] }
pyo3 = { version = "0.28.2", features = [
    "extension-module",
    "chrono",
    "generate-import-lib",
] }
chrono = { version = "0.4.42", features = ["serde"] }
pyo3-file = { git = "https://github.com/dimastbk/pyo3-file.git", rev = "b0a5b260d13c6df14ea021b06c071a6f389fa805" }

[build-dependencies]
pyo3-build-config = "0.28.2"
