[package]
name = "python-calamine"
version = "0.7.0"
edition = "2021"

[lib]
name = "python_calamine"
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.36.0", features = ["chrono"] }
pyo3 = { version = "0.29.0", features = [
    "extension-module",
    "chrono",
    "generate-import-lib",
] }
chrono = { version = "0.4.42", features = ["serde"] }
pyo3-file = { git = "https://github.com/omerbenamram/pyo3-file.git", rev = "e88695f375ea3db95d96efc53707f4e8eb1def00" }

[build-dependencies]
pyo3-build-config = "0.29.0"
