[project]
name = "python-calamine"
description = "Python binding for Rust's library for reading excel and odf file - calamine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Dmitriy", email = "dimastbk@proton.me" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "maturin~=1.0",
  "pre-commit~=4.3",
  "pytest~=8.0",
  "pandas[excel]~=2.2",
]

[project.urls]
homepage = "https://github.com/dimastbk/python-calamine"
source = "https://github.com/dimastbk/python-calamine"

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "python_calamine._python_calamine"
python-source = "python"
